test/TestPhases/causality/valid/BlockGraphTest.blc
@[EntryPoint]
activity A()
    cobegin
        await true
    with
        await true
    end

    cobegin
        await true
    with
        await true
    end
end